--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <footer>
     <hr>
     <div class="footer_container">
-      <div class="footer_logo">
+      <div class="footer_logo" id="footer_logo">
         <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
       </div>
       <p>Learn to Code, Learn to be Creative.</p>
